-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
-
CAR Team 2026-06-22
-
200
-
🟥 DDL
-
None
-
None
-
None
-
None
-
None
-
None
In the all feature flags variant, the resharding command does not actually update the CSR with the new version when committing, nor does it clear the filtering information. This can cause other DDL commands and CRUD operations to fail due to having a stale version after a resharding operation.
- causes
-
SERVER-128998 Disable shard_identifier_user_input_commands.js with authoritative shards enabled
-
- Closed
-
- is caused by
-
SERVER-128608 Re-enable authoritative path for resharding migration calls
-
- Closed
-
- is duplicated by
-
SERVER-128998 Disable shard_identifier_user_input_commands.js with authoritative shards enabled
-
- Closed
-
- is related to
-
SERVER-128917 Skip placement version bumps during coordinator state transitions when config.collections writes are no-ops
-
- Closed
-