SERVER-128997 Resharing should not bump the ShardVersion when updating the resharding fields if it commits authoritatively (#55986)

GitOrigin-RevId: c19567fba6a720a803b502dadd8c676d9a69705b