jstests/noPassthrough/global_catalog/authoritative_collection_metadata_vs_ddls.js
@@ -78,6 +78,7 @@ describe("Authoritative collection metadata vs DDLs", function () {
         node,
         ns,
         {expectedUuid, expectedKey, expectedChunks, expectedTimeseriesFields, expectedTimestamp},
+        skipLastModCheck = false,
     ) {
         const label = node.host;
         const meta = getShardCatalogCollMetadata(node, ns);
@@ -113,6 +114,13 @@ describe("Authoritative collection metadata vs DDLs", function () {
                 tojson(shardChunks[i].max),
                 `${label}: chunk ${i} max boundary mismatch`,
             );
+            if (!skipLastModCheck) {
+                assert.eq(
+                    tojson(expectedChunks[i].lastmod),
+                    tojson(shardChunks[i].lastmod),
+                    `${label}: chunk ${i} placement version (lastmod) mismatch`,
+                );
+            }
         }
     }
 
@@ -1578,11 +1586,16 @@ describe("Authoritative collection metadata vs DDLs", function () {
                     assertInMemoryMetadataNotSharded(rs.getPrimary(), ns);
                 } else {
                     rs.nodes.forEach((node) => {
-                        assertShardCatalogOnNode(node, ns, {
-                            expectedUuid: sourceUuid,
-                            expectedKey: sourceKey,
-                            expectedChunks: shardGlobalChunks,
-                        });
+                        assertShardCatalogOnNode(
+                            node,
+                            ns,
+                            {
+                                expectedUuid: sourceUuid,
+                                expectedKey: sourceKey,
+                                expectedChunks: shardGlobalChunks,
+                            },
+                            true /* skipLastModCheck */,
+                        );
                     });
                     assertInMemoryMetadataSharded(rs.getPrimary(), ns, sourceKey);
                 }
